# magnetar

./: .gitignore  .prettierignore  .prettierrc.json  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GUIDELINES.md  LICENSE  NOTICE  README.md  clippy.toml  deny.toml  rust-analyzer.toml  rust-toolchain.toml  rustfmt.toml
crates/magnetar/: Cargo.toml
crates/magnetar-admin/: Cargo.toml  README.md
crates/magnetar-admin/src/: lib.rs  tls_crypto.rs
crates/magnetar-admin/tests/: bookies.rs  brokers_config.rs  diagnostics.rs  functions.rs  namespace_policies.rs  namespace_policies_breadth.rs  namespace_policies_more.rs  packages.rs  pip_180_shadow_topic.rs  pip_415_message_id_by_index.rs  scenarios_invariants.rs  schemas.rs  sinks.rs  sources.rs  subscriptions.rs  topic_ops.rs  topic_policies.rs  url_construction.rs
crates/magnetar-auth-athenz/: Cargo.toml
crates/magnetar-auth-athenz/src/: lib.rs  tls_crypto.rs  zts.rs
crates/magnetar-auth-oauth2/: Cargo.toml
crates/magnetar-auth-oauth2/src/: lib.rs  tls_crypto.rs
crates/magnetar-auth-sasl/: Cargo.toml
crates/magnetar-auth-sasl/src/: gssapi.rs  kerberos.rs  lib.rs  plain.rs
crates/magnetar-cli/: Cargo.toml  README.md  build.rs
crates/magnetar-cli/src/: main.rs  version.rs
crates/magnetar-cli/tests/: cli_version.rs  parse.rs
crates/magnetar-differential/: Cargo.toml
crates/magnetar-differential/src/: broker.rs  lib.rs  runner_moonpool.rs  runner_tokio.rs  trace.rs
crates/magnetar-differential/tests/: anti_thrash_equivalence.rs  athenz_auth_data_equivalence.rs  auto_failover_equivalence.rs  broker_smoke.rs  buggify_disabled_equivalence.rs  connect_resilience_equivalence.rs  corrupted_frame_equivalence.rs  crypto_failure_action_equivalence.rs  crypto_roundtrip_equivalence.rs  driver_mid_session_reject_equivalence.rs  golden_traces.rs  handshake_error_bound_equivalence.rs  keepalive_watchdog_equivalence.rs  lookup_direct_multi_broker_equivalence.rs  lookup_drop_unregister_equivalence.rs  lookup_redirect_chain_equivalence.rs  lookup_reset_race_equivalence.rs  otel_context_propagation_equivalence.rs  partitioned_metadata_fast_path_equivalence.rs  producer_drop_equivalence.rs  proxy_routing_equivalence.rs  reconnect_replay_gating_equivalence.rs  redirect_url_allow_list_equivalence.rs  replicated_subscriptions_equivalence.rs  sasl_kerberos_equivalence.rs  scalable_topic_equivalence.rs  shadow_topic_equivalence.rs  supervisor_backoff_persistence_equivalence.rs  terminal_error_equivalence.rs  two_producers_parallel_equivalence.rs
crates/magnetar-fakes/: Cargo.toml
crates/magnetar-fakes/src/: lib.rs
crates/magnetar-messagecrypto/: Cargo.toml
crates/magnetar-messagecrypto/src/: lib.rs
crates/magnetar-proto/: Cargo.toml  README.md
crates/magnetar-proto/fuzz/: Cargo.toml
crates/magnetar-proto/proto/: SOURCE
crates/magnetar-proto/src/: anti_thrash.rs  auth.rs  backoff.rs  buggify.rs  cluster_failover.rs  conn.rs  conn_types.rs  consumer.rs  crypto.rs  dag_watch.rs  error.rs  event.rs  frame.rs  health_probe.rs  lib.rs  log_fields.rs  lookup.rs  markers.rs  producer.rs  service_url.rs  supervisor.rs  time.rs  topic_watcher.rs  transmit.rs  txn.rs  types.rs
crates/magnetar-proto/tests/: log_capture.rs  producer_close.rs  slot_hot_path.rs
crates/magnetar-runtime-moonpool/: Cargo.toml
crates/magnetar-runtime-moonpool/seeds/: known-failing.toml
crates/magnetar-runtime-moonpool/src/: auto_cluster_failover.rs  client.rs  consumer.rs  crypto.rs  dns.rs  driver.rs  lib.rs  log_fields.rs  pool.rs  producer.rs  tls.rs  tls_crypto.rs  transport.rs
crates/magnetar-runtime-moonpool/tests/: anti_thrash.rs  athenz_refresh_edge.rs  buggify_sim_sweep.rs  clock_injection.rs  connect_resilience.rs  consumer_flow_control_edge.rs  coverage_close.rs  driver_mid_session_reject.rs  frame_reorder.rs  handle_bytes_owned_parity.rs  handshake_error_capture.rs  keepalive_watchdog.rs  logging_checksum.rs  logging_no_secrets.rs  lookup_before_open.rs  lookup_direct_multi_broker.rs  lookup_drop_unregister.rs  lookup_error_propagation.rs  lookup_redirect_chain.rs  lookup_reset_race.rs  memory_limit_race_stress.rs  mid_handshake_partition.rs  oauth_refresh_edge.rs  otel_context_propagation.rs  partitioned_metadata_fast_path.rs  pip_121_auto_failover.rs  pip_121_oscillation.rs  pip_188_migrate_then_migrate_again.rs  poll_transmit_vectored_parity.rs  pool_lifecycle.rs  producer_drop_close.rs  producer_memory_limit_concurrent.rs  proxy_multi_conn.rs  reconnect_replay_gating.rs  reconnect_with_inflight.rs  replicated_subscriptions.rs  sasl_kerberos_challenge.rs  scalable_topic.rs  shadow_topic.rs  sim_chaos.rs  (+12 more)
crates/magnetar-runtime-tokio/: Cargo.toml
crates/magnetar-runtime-tokio/src/: auth_file.rs  auto_cluster_failover.rs  client.rs  compress.rs  consumer.rs  crypto.rs  dns.rs  driver.rs  error.rs  lib.rs  log_fields.rs  pool.rs  producer.rs  tls_crypto.rs  tls_insecure.rs  tls_no_hostname.rs  transport.rs  url_parse.rs
crates/magnetar-runtime-tokio/tests/: anti_thrash.rs  athenz_zts_round_trip.rs  auto_cluster_failover_integration.rs  buggify_off_is_nop.rs  clock_injection.rs  connect_resilience.rs  consumer_flow_control_edge.rs  coverage_close.rs  driver_mid_session_reject.rs  error_mapping.rs  handle_bytes_owned_parity.rs  handshake_error_capture.rs  keepalive_watchdog.rs  logging_checksum.rs  logging_no_secrets.rs  lookup_before_open.rs  lookup_direct_multi_broker.rs  lookup_drop_unregister.rs  lookup_error_propagation.rs  lookup_redirect_chain.rs  lookup_reset_race.rs  memory_limit_race_stress.rs  otel_context_propagation.rs  partitioned_metadata_fast_path.rs  poll_transmit_vectored_parity.rs  pool_lifecycle.rs  producer_drop_close.rs  producer_memory_limit_concurrent.rs  proxy_multi_conn.rs  reconnect_replay_gating.rs  reconnect_with_inflight.rs  replicated_subscriptions.rs  sasl_kerberos_challenge.rs  scalable_topic.rs  shadow_topic.rs  supervised_redial.rs  supervisor_backoff_persistence.rs  terminal_exit.rs  tls_crypto_provider_smoke.rs  tls_handshake_chaos.rs  (+6 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+234 files in other folders)
