[workspace]
resolver = "3"
members = [
    "crates/magnetar",
    "crates/magnetar-admin",
    "crates/magnetar-auth-athenz",
    "crates/magnetar-auth-oauth2",
    "crates/magnetar-auth-sasl",
    "crates/magnetar-cli",
    "crates/magnetar-differential",
    "crates/magnetar-fakes",
    "crates/magnetar-messagecrypto",
    "crates/magnetar-proto",
    "crates/magnetar-runtime-moonpool",
    "crates/magnetar-runtime-tokio",
    "xtask",
]

[workspace.package]
version       = "0.1.0-dev.0"
edition       = "2024"
rust-version  = "1.85"
license       = "Apache-2.0"
authors       = ["Florentin Dubois <florentin.dubois@clever-cloud.com>"]
repository    = "https://github.com/CleverCloud/magnetar"
homepage      = "https://github.com/CleverCloud/magnetar"
readme        = "README.md"
keywords      = ["pulsar", "apache-pulsar", "messaging", "streaming", "sans-io"]
categories    = ["asynchronous", "network-programming"]

[workspace.dependencies]
# Internal crates
magnetar                 = { version = "0.1.0-dev.0", path = "crates/magnetar" }
magnetar-admin           = { version = "0.1.0-dev.0", path = "crates/magnetar-admin" }
magnetar-auth-athenz     = { version = "0.1.0-dev.0", path = "crates/magnetar-auth-athenz" }
magnetar-auth-oauth2     = { version = "0.1.0-dev.0", path = "crates/magnetar-auth-oauth2" }
magnetar-auth-sasl       = { version = "0.1.0-dev.0", path = "crates/magnetar-auth-sasl" }
magnetar-differential    = { version = "0.1.0-dev.0", path = "crates/magnetar-differential" }
magnetar-fakes           = { version = "0.1.0-dev.0", path = "crates/magnetar-fakes" }
magnetar-messagecrypto   = { version = "0.1.0-dev.0", path = "crates/magnetar-messagecrypto" }
magnetar-proto           = { version = "0.1.0-dev.0", path = "crates/magnetar-proto" }
magnetar-runtime-moonpool = { version = "0.1.0-dev.0", path = "crates/magnetar-runtime-moonpool" }
magnetar-runtime-tokio   = { version = "0.1.0-dev.0", path = "crates/magnetar-runtime-tokio" }

# Codec
prost           = "0.13"
prost-build     = "0.13"
prost-types     = "0.13"
bytes           = "1"
crc32c          = "0.6"

# Async runtime (engines only, NEVER magnetar-proto)
tokio           = { version = "1", default-features = false }
tokio-util      = { version = "0.7", default-features = false }
futures         = { version = "0.3", default-features = false }
futures-util    = { version = "0.3", default-features = false }
pin-project-lite = "0.2"
parking_lot     = "0.12"
arc-swap        = "1"
slab            = "0.4"

# TLS — rustls everywhere, no native-tls. The provider sub-feature
# (`ring` / `aws_lc_rs` / `fips`) is selected by each downstream crate
# via its own `crypto-*` feature so cargo does NOT silently unify two
# providers into a single build (issue #9, ADR-0035). `tls12` and
# `logging` stay on; both are rustls's own default-on features.
rustls               = { version = "0.23", default-features = false, features = ["std", "tls12", "logging"] }
# rustls-pemfile was marked unmaintained (RUSTSEC-2025-0134); we now parse PEMs via
# rustls-pki-types' `PemObject` trait, which is the upstream-recommended replacement.
rustls-pki-types     = { version = "1", features = ["std"] }
rustls-native-certs  = "0.8"
tokio-rustls         = { version = "0.26", default-features = false }
# `rustls-openssl` is opted-in via the façade's `crypto-openssl` feature
# only (issue #9, ADR-0035). It is the rustls crypto-provider crate that
# wraps OpenSSL; the openssl / openssl-sys carve-out in `deny.toml`
# allows that subgraph specifically.
rustls-openssl       = { version = "0.3", default-features = false }

# Compression — Pulsar's four codecs
lz4_flex   = { version = "0.11", default-features = false, features = ["std"] }
zstd       = { version = "0.13", default-features = false }
snap       = "1"
flate2     = { version = "1", default-features = false, features = ["zlib"] }

# Schemas
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
apache-avro = "0.21"
schemars    = { version = "1", default-features = false, features = ["derive", "std"] }

# PIP-37 chunking + identifiers
uuid       = { version = "1", default-features = false, features = ["v4", "fast-rng", "std"] }

# PIP-4 message encryption — AES-GCM via aws-lc-rs (audited, FIPS-friendly)
aws-lc-rs  = { version = "1", default-features = false, features = ["aws-lc-sys"] }

# moonpool engine
moonpool-core = "=0.6"
# moonpool-sim provides the deterministic SimProviders used by the
# differential harness chaos pack (ADR-0024). Pinned to the same minor
# as moonpool-core so the two crates stay version-compatible. Vendored
# as a workspace dep but opted into per-crate (currently only the
# differential harness needs it).
moonpool-sim = "=0.6"

# Admin REST + CLI. The TLS sub-feature (`rustls-tls` vs
# `rustls-tls-no-provider`) is picked by each downstream crate from its
# `crypto-*` feature; the workspace dep stays free of a hard-wired
# provider sub-feature (issue #9, ADR-0035).
reqwest = { version = "0.12", default-features = false, features = ["json"] }
url     = "2"
http    = "1"
clap    = { version = "4", features = ["derive", "env"] }

# Telemetry + errors
tracing            = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
thiserror          = "2"
anyhow             = "1"
hdrhistogram       = { version = "7", default-features = false }

# Test infrastructure
testcontainers = "0.27"
rstest         = "0.21"
proptest       = "1"
tempfile       = "3"
wiremock       = "0.6"
# `async-trait` is needed by moonpool-sim's `Workload` trait, which uses
# `#[async_trait(?Send)]`. Pinned to the major version moonpool-sim 0.6
# transitively depends on.
async-trait    = "0.1"

[workspace.lints.rust]
unsafe_code                   = "forbid"
unreachable_pub               = "warn"
missing_debug_implementations = "warn"
rust_2024_compatibility       = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pulsar identifiers, sequence ids, and timestamps regularly require explicit casts.
cast_possible_truncation = "allow"
cast_sign_loss            = "allow"
cast_possible_wrap        = "allow"
module_name_repetitions   = "allow"
must_use_candidate        = "allow"
missing_errors_doc        = "allow"
missing_panics_doc        = "allow"
# Trait method `fn method(&self) -> &str` returns a literal in every impl, but the
# trait signature is borrow-bound to `&self` so clippy wants us to narrow to
# `&'static str`. Changing the trait signature is more disruptive than the lint payoff.
unnecessary_literal_bound = "allow"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
overflow-checks = true
panic         = "abort"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1   # tests still need to be quick under the sans-io harness
