[workspace]
resolver = "3"
members = [
    "crates/magnetar",
    "crates/magnetar-admin",
    "crates/magnetar-auth-athenz",
    "crates/magnetar-auth-oauth2",
    "crates/magnetar-auth-sasl",
    "crates/magnetar-cli",
    "crates/magnetar-differential",
    "crates/magnetar-fakes",
    "crates/magnetar-messagecrypto",
    "crates/magnetar-proto",
    "crates/magnetar-runtime-moonpool",
    "crates/magnetar-runtime-tokio",
    "xtask",
]

[workspace.package]
version       = "0.1.0-dev.0"
edition       = "2024"
rust-version  = "1.88"
license       = "Apache-2.0"
authors       = ["Florentin Dubois <florentin.dubois@clever-cloud.com>"]
repository    = "https://github.com/CleverCloud/magnetar"
homepage      = "https://github.com/CleverCloud/magnetar"
readme        = "README.md"
keywords      = ["pulsar", "apache-pulsar", "messaging", "streaming", "sans-io"]
categories    = ["asynchronous", "network-programming"]

[workspace.dependencies]
# Internal crates
# `default-features = false` so the only consumer (magnetar-cli) can pick
# its own `crypto-*` provider via `--no-default-features --features
# crypto-ring|openssl|fips`. Without this, the façade's own defaults
# (`tokio` + `crypto-aws-lc-rs`) leak in and produce a multi-provider
# build for any single-provider override. ADR-0035 §1.
magnetar                 = { version = "^0.1.0-dev.0", path = "crates/magnetar", default-features = false }
magnetar-admin           = { version = "^0.1.0-dev.0", path = "crates/magnetar-admin" }
magnetar-auth-athenz     = { version = "^0.1.0-dev.0", path = "crates/magnetar-auth-athenz" }
magnetar-auth-oauth2     = { version = "^0.1.0-dev.0", path = "crates/magnetar-auth-oauth2" }
magnetar-auth-sasl       = { version = "^0.1.0-dev.0", path = "crates/magnetar-auth-sasl" }
magnetar-differential    = { version = "^0.1.0-dev.0", path = "crates/magnetar-differential" }
magnetar-fakes           = { version = "^0.1.0-dev.0", path = "crates/magnetar-fakes" }
magnetar-messagecrypto   = { version = "^0.1.0-dev.0", path = "crates/magnetar-messagecrypto" }
magnetar-proto           = { version = "^0.1.0-dev.0", path = "crates/magnetar-proto" }
magnetar-runtime-moonpool = { version = "^0.1.0-dev.0", path = "crates/magnetar-runtime-moonpool" }
magnetar-runtime-tokio   = { version = "^0.1.0-dev.0", path = "crates/magnetar-runtime-tokio" }

# Codec
prost           = "^0.14.3"
prost-build     = "^0.14.3"
prost-types     = "^0.14.3"
bytes           = "^1.11.1"
crc32c          = "^0.6.8"

# Async runtime (engines only, NEVER magnetar-proto)
tokio           = { version = "^1.52.3", default-features = false }
tokio-util      = { version = "^0.7.18", default-features = false }
futures         = { version = "^0.3.32", default-features = false }
futures-util    = { version = "^0.3.32", default-features = false }
pin-project-lite = "^0.2.17"
parking_lot     = "^0.12.5"
slab            = "^0.4.12"
# rustc-hash (FxHash) for hot-path HashMaps whose keys are u64-shaped
# (SequenceId, batch tuples). The default SipHash is overkill for keys
# we control end-to-end; FxHash is a tiny no-dep crate maintained by
# the rust-lang team and used in rustc itself.
rustc-hash      = "^2.1.2"

# TLS — rustls everywhere, no native-tls. The provider sub-feature
# (`ring` / `aws_lc_rs` / `fips`) is selected by each downstream crate
# via its own `crypto-*` feature so cargo does NOT silently unify two
# providers into a single build (issue #9, ADR-0035). `tls12` and
# `logging` stay on; both are rustls's own default-on features.
rustls               = { version = "^0.23.40", default-features = false, features = ["std", "tls12", "logging"] }
# rustls-pemfile was marked unmaintained (RUSTSEC-2025-0134); we now parse PEMs via
# rustls-pki-types' `PemObject` trait, which is the upstream-recommended replacement.
rustls-pki-types     = { version = "^1.14.1", features = ["std"] }
rustls-native-certs  = "^0.8.3"
tokio-rustls         = { version = "^0.26.4", default-features = false }
# `rustls-openssl` is opted-in via the façade's `crypto-openssl` feature
# only (issue #9, ADR-0035). It is the rustls crypto-provider crate that
# wraps OpenSSL; the openssl / openssl-sys carve-out in `deny.toml`
# allows that subgraph specifically.
rustls-openssl       = { version = "^0.3.1", default-features = false }

# Compression — Pulsar's four codecs
lz4_flex   = { version = "^0.13.1", default-features = false, features = ["std"] }
zstd       = { version = "^0.13.3", default-features = false }
snap       = "^1.1.1"
flate2     = { version = "^1.1.9", default-features = false, features = ["zlib"] }

# Schemas
serde       = { version = "^1.0.228", features = ["derive"] }
serde_json  = "^1.0.150"
apache-avro = "^0.21.0"
schemars    = { version = "^1.2.1", default-features = false, features = ["derive", "std"] }

# PIP-37 chunking + identifiers
uuid       = { version = "^1.23.1", default-features = false, features = ["v4", "fast-rng", "std"] }

# PIP-4 message encryption — AES-GCM via aws-lc-rs (audited, FIPS-friendly).
# Also serves as the default RSA backend for the Athenz JwtSigner under
# `magnetar-auth-athenz/crypto-aws-lc-rs` (ADR-0030 + ADR-0035).
aws-lc-rs  = { version = "^1.17.0", default-features = false, features = ["aws-lc-sys"] }
# Alternate RSA backend for the Athenz JwtSigner under
# `magnetar-auth-athenz/crypto-ring`. Same RSASSA-PKCS1-v1_5 SHA-256
# signature bytes as aws-lc-rs (RFC 8017 deterministic encoding).
ring       = { version = "^0.17.14", default-features = false }
# Defense-in-depth: zero parsed-key material on drop. Used by the Athenz
# concrete JwtSigner backends (ADR-0030).
zeroize    = { version = "^1.8.2", default-features = false }
# URL-safe-without-padding base64 for the JWS compact serialisation
# emitted by the Athenz JwtSigner backends (RFC 7515 §3.1).
base64     = { version = "^0.22.1", default-features = false, features = ["std"] }

# SASL Kerberos / GSSAPI. Safe Rust wrapper over the system GSS-API
# (libkrb5 / Heimdal). Only opted-in by `magnetar-auth-sasl` under its
# `kerberos` feature; downstream crates stay free of `libkrb5` link
# requirements on hosts that don't enable Kerberos. See ADR-0029.
libgssapi  = { version = "^0.9.1", default-features = false }

# moonpool engine — temporarily floating on git `main` (per ADR-0043) to
# pick up the futures-io `TcpStream` + segment-granular `write_vectored`
# breaking change ahead of the next crates.io release. The explicit
# `version` is not redundant with `branch`: it keeps the dep off cargo-deny's
# wildcard ban AND guards against a silent moonpool major bump — when main
# crosses 0.7 the build fails resolution, which is exactly the ADR-0043
# re-pin trigger. Both crates track the same rev so they stay
# version-compatible; see ADR-0024 + ADR-0036.
moonpool-core = { version = "0.6.0", git = "https://github.com/PierreZ/moonpool", branch = "main" }
# moonpool-sim provides the deterministic SimProviders used by the
# differential harness chaos pack (ADR-0024). Tracks the same git rev as
# moonpool-core so the two crates stay version-compatible. Vendored as a
# workspace dep but opted into per-crate (currently only the differential
# harness needs it).
moonpool-sim = { version = "0.6.0", git = "https://github.com/PierreZ/moonpool", branch = "main" }

# Admin REST + CLI. The TLS sub-feature (`rustls` vs `rustls-no-provider`,
# renamed from `rustls-tls` / `rustls-tls-no-provider` in reqwest 0.13) is
# picked by each downstream crate from its `crypto-*` feature; the workspace
# dep stays free of a hard-wired provider sub-feature (issue #9, ADR-0035).
# `form` (gated behind its own feature in 0.13) powers the OAuth2 token
# exchange's `RequestBuilder::form`. `multipart` (also gated since 0.13)
# powers the V3 URL-based create / register family:
# `POST/PUT /admin/v3/functions/.../{name}` for Functions,
# `POST/PUT /admin/v3/sources/.../{name}` and `.../sinks/.../{name}` for
# IO connectors. The broker insists on `multipart/form-data` with a
# `url=<pkg-url>` part and a typed JSON part (`functionConfig` /
# `sourceConfig` / `sinkConfig`), even when no file is uploaded.
reqwest = { version = "^0.13.4", default-features = false, features = ["json", "form", "multipart"] }
url     = "^2.5.8"
http    = "^1.4.1"
clap    = { version = "^4.6.1", features = ["derive", "env"] }

# Telemetry + errors
tracing            = "^0.1.44"
tracing-subscriber = { version = "^0.3.23", default-features = false, features = ["fmt", "env-filter"] }
thiserror          = "^2.0.18"
anyhow             = "^1.0.102"
hdrhistogram       = { version = "^7.5.4", default-features = false }

# Test infrastructure
testcontainers = "^0.27.3"
rstest         = "^0.26.1"
proptest       = "^1.11.0"
tempfile       = "^3.27.0"
wiremock       = "^0.6.5"
# `async-trait` is needed by moonpool-sim's `Workload` trait, which uses
# `#[async_trait(?Send)]`. Pinned to the major version moonpool-sim 0.6
# transitively depends on.
async-trait    = "^0.1.89"

[workspace.lints.rust]
unsafe_code                   = "forbid"
unreachable_pub               = "warn"
missing_debug_implementations = "warn"
rust_2024_compatibility       = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pulsar identifiers, sequence ids, and timestamps regularly require explicit casts.
cast_possible_truncation = "allow"
cast_sign_loss            = "allow"
cast_possible_wrap        = "allow"
module_name_repetitions   = "allow"
must_use_candidate        = "allow"
missing_errors_doc        = "allow"
missing_panics_doc        = "allow"
# Trait method `fn method(&self) -> &str` returns a literal in every impl, but the
# trait signature is borrow-bound to `&self` so clippy wants us to narrow to
# `&'static str`. Changing the trait signature is more disruptive than the lint payoff.
unnecessary_literal_bound = "allow"
# clippy 1.95 + MSRV 1.88 (ADR-0042) surfaces `collapsible_if` suggestions that
# collapse nested `if let A { if let B { … } }` into a let-chain
# `if let A && let B { … }`. The two forms compile identically and the nested
# form is often clearer once the body grows. Refactor tracked separately; do
# not block the validation chain on this lint.
collapsible_if = "allow"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
overflow-checks = true
panic         = "abort"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1   # tests still need to be quick under the sans-io harness
