[package]
name        = "xtask"
description = "Build helpers for magnetar — protoc codegen, no-channels lint, no-io-deps assertion, vendoring, e2e launcher."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
publish     = false

[lints]
workspace = true

[dependencies]
anyhow      = { workspace = true }
clap        = { workspace = true }
prost-build = { workspace = true }
tempfile    = { workspace = true }
