[package]
name        = "magnetar-admin"
description = "Apache Pulsar admin REST client for Rust."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[features]
# Pluggable rustls crypto provider (issue #9, ADR-0035). reqwest 0.12's
# `rustls-tls` resolves to aws-lc-rs internally; `rustls-tls-no-provider`
# trusts the caller to `install_default()` whichever provider is in use
# (the tokio engine boot does that idempotently via the
# `magnetar_runtime_tokio::tls_crypto::install_default_provider()` shim).
crypto-aws-lc-rs = ["reqwest/rustls-tls"]
crypto-ring      = ["reqwest/rustls-tls-no-provider"]
crypto-openssl   = ["reqwest/rustls-tls-no-provider"]
crypto-fips      = ["reqwest/rustls-tls-no-provider"]

[dependencies]
magnetar-proto = { workspace = true }
reqwest        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
url            = { workspace = true }
http           = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = { workspace = true }
