[package]
name        = "magnetar-auth-athenz"
description = "Athenz auth provider for magnetar."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[features]
# Pluggable rustls crypto provider (issue #9, ADR-0035). This crate
# only uses rustls types (cert / material), not the crypto provider
# itself; the features exist so the façade's propagation chain compiles
# uniformly across all rustls consumers. `crypto-openssl` is a no-op
# here because rustls-openssl is a runtime provider crate, not a type
# surface.
crypto-aws-lc-rs = ["rustls/aws_lc_rs"]
crypto-ring      = ["rustls/ring"]
crypto-fips      = ["rustls/fips"]
crypto-openssl   = []
# ZTS round-trip — opt-in HTTP client + caching layer that exchanges a
# caller-signed JWT for an Athenz role token via the ZTS REST endpoint.
# Off by default; callers without `zts` keep the lightweight
# `with_role_token` path (the caller hands an already-minted role token).
zts              = ["dep:reqwest", "dep:tokio", "dep:url"]

[dependencies]
bytes          = { workspace = true }
magnetar-proto = { workspace = true }
rustls         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
reqwest        = { workspace = true, optional = true }
tokio          = { workspace = true, optional = true, features = ["sync", "time"] }
url            = { workspace = true, optional = true }
