[package]
name        = "magnetar-auth-athenz"
description = "Athenz auth provider for magnetar."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[features]
# Pluggable rustls crypto provider (issue #9, ADR-0035). Two roles:
#
# 1. propagate the rustls provider sub-feature so the façade's feature
#    chain compiles uniformly across every rustls consumer; and
# 2. select the RSA backend used by the concrete `JwtSigner` (ADR-0030).
#
# Both backends are mutually pluggable — under `--all-features` the cfg
# cascade in `src/jwt_signer/mod.rs` picks aws-lc-rs first, mirroring
# the rustls priority order in `magnetar-runtime-{tokio,moonpool}/src/
# tls_crypto.rs`. `crypto-openssl` and `crypto-fips` propagate the
# rustls provider sub-feature only — there is no `rustls-openssl` /
# FIPS-specific signer backend (the FIPS-validated path comes from
# `aws-lc-rs`'s FIPS feature, picked via `crypto-fips` upstream).
crypto-aws-lc-rs = ["rustls/aws_lc_rs", "dep:aws-lc-rs", "dep:zeroize", "dep:base64", "dep:rustls-pki-types"]
crypto-ring      = ["rustls/ring",      "dep:ring",      "dep:zeroize", "dep:base64", "dep:rustls-pki-types"]
crypto-fips      = ["rustls/fips"]
crypto-openssl   = ["dep:rustls-openssl"]
# ZTS round-trip — opt-in HTTP exchange behind the pluggable
# `zts::ZtsClient` trait. Off by default; callers without `zts` keep the
# lightweight `with_role_token` path (the caller hands an already-minted
# role token). The expiry-aware cache lives in `AthenzProvider` (always
# compiled, `parking_lot`-guarded); `async-trait` carries the `ZtsClient`
# seam so the deterministic-simulation tests can inject a scripted fake.
zts              = ["dep:reqwest", "dep:url", "dep:async-trait"]

[dependencies]
bytes            = { workspace = true }
magnetar-proto   = { workspace = true }
parking_lot      = { workspace = true }
rustls           = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
async-trait      = { workspace = true, optional = true }
reqwest          = { workspace = true, optional = true }
rustls-openssl   = { workspace = true, optional = true }
url              = { workspace = true, optional = true }
# Concrete `JwtSigner` backends (ADR-0030 + ADR-0035). At most one is
# active per build; under `--all-features` the cfg cascade in
# `src/jwt_signer/mod.rs` prefers aws-lc-rs.
aws-lc-rs        = { workspace = true, optional = true }
ring             = { workspace = true, optional = true }
zeroize          = { workspace = true, optional = true }
base64           = { workspace = true, optional = true }
# Used by the concrete signer backends to parse the tenant PKCS#8 PEM
# into raw DER bytes; cheaper than pulling a dedicated PEM crate, and
# `rustls-pki-types` is already a workspace dep.
rustls-pki-types = { workspace = true, optional = true }
