[package]
name        = "magnetar-auth-oauth2"
description = "OAuth2 ClientCredentialsFlow auth provider for magnetar."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[features]
# Pluggable rustls crypto provider (issue #9, ADR-0035). Same shape as
# `magnetar-admin`: reqwest's `rustls-tls` resolves to aws-lc-rs;
# `rustls-tls-no-provider` defers to whichever provider the engine boot
# installed.
crypto-aws-lc-rs = ["reqwest/rustls-tls"]
crypto-ring      = ["reqwest/rustls-tls-no-provider"]
crypto-openssl   = ["reqwest/rustls-tls-no-provider"]
crypto-fips      = ["reqwest/rustls-tls-no-provider"]

[dependencies]
bytes          = { workspace = true }
magnetar-proto = { workspace = true }
parking_lot    = { workspace = true }
reqwest        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
url            = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
