[package]
name        = "magnetar-auth-sasl"
description = "SASL auth provider for magnetar."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[dependencies]
magnetar-proto = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
