[package]
name        = "magnetar-auth-sasl"
description = "SASL auth provider for magnetar."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[dependencies]
bytes          = { workspace = true }
magnetar-proto = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }

[features]
# Kerberos/GSSAPI support is feature-gated. Disabled by default so the crate stays
# easy to build on systems without `libkrb5`. When enabled, the implementation will
# wire `SaslKerberos` to a GSSAPI library (not in M6).
kerberos = []
