[package]
name        = "magnetar-auth-sasl"
description = "SASL auth providers (PLAIN + Kerberos/GSSAPI) for magnetar."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[dependencies]
bytes          = { workspace = true }
libgssapi      = { workspace = true, optional = true }
magnetar-proto = { workspace = true }
parking_lot    = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }

[features]
# Real GSSAPI/Kerberos support. Pulls in the `libgssapi` crate, which links
# against the system MIT KRB5 / Heimdal runtime. Off by default so the crate
# builds on hosts without `libkrb5`. The SASL state machine and the
# scripted-token test fake are always available; the GSSAPI binding itself
# (`LibGssapiClient`) lives behind this flag — see ADR-0029.
kerberos = ["dep:libgssapi"]
